# notectl

./: .gitignore  .mcp.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  flake.nix  lefthook.yml  ralph.sh
.claude/: settings.json  settings.local.json
.claude/skills/release/: SKILL.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: cd.yml  ci.yml
.opencode/plugins/: post-turn-check.ts
.pi/extensions/ralph/: index.ts  package.json
.tickets/: markdown-todo-extractor-35e.md  markdown-todo-extractor-afx.md  markdown-todo-extractor-ved.md  mte-23h3.md  mte-46gp.md  mte-c5oz.md  mte-jeur.md  mte-r91g.md  mte-rg2c.md  mte-uosl.md  mte-urmv.md
backlog/: config.yml  unblocked-todo.sh
backlog/drafts/: draft-1 - Integrate-file-level-tags-into-search-chunks.md
backlog/tasks/: task-1 - Semantic-search-over-full-notes-notectl-search.md  task-1.1 - Research-pin-candle-Gemma-3-embedding-path-BM25-crate-EmbeddingGemma-license.md  task-1.10 - Capability-Operations-IndexOperation-SearchOperation.md  task-1.11 - Register-search-capability-in-CapabilityRegistry.md  task-1.12 - Wire-MCP-tools-for-search-build_search_index.md  task-1.13 - Update-PRIME_TEXT-README-CLAUDE.md-.gitignore.md  task-1.14 - Tests-unit-coverage-gated-integration-test.md  task-1.14.1 - Unit-test-coverage-gaps-bm25-sparse-download.md  task-1.14.2 - Integration-test-populate-REFERENCE_EMBEDDING-from-TEI-run.md  task-1.14.2.1 - Populate-REFERENCE_EMBEDDING-and-DOC_REFERENCE_EMBEDDING-vectors.md  task-1.14.3 - Doc-tests-for-public-APIs-smoke-test-documentation.md  task-1.15 - Fix-compile-errors-in-notectl-search-embeddings-module.md  task-1.16 - embed_batch-pairs-texts-with-wrong-titles-across-batches.md  task-1.17 - Vector-storage-round-trip-corrupts-embeddings-on-reload.md  task-1.18 - Chunker-heading_path-omits-real-ancestors-for-non-nested-headings.md  task-1.19 - Chunker-line_start-line_end-are-wrong-for-size-fallback-and-split-long-section-chunks.md  task-1.2 - Scaffold-notectl-search-crate-workspace-wiring.md  task-1.20 - tokenize_with_overlap-panics-when-overlap_tokens-exceeds-the-current-window.md  task-1.21 - Reconcile-duplicate-SearchConfig-types-between-notectl-core-and-notectl-search.md  task-1.22 - Resolve-BM25-crate-vs-hand-rolled-duplication-and-add-an-inverted-index.md  task-1.23 - Sparse-index-wrapper-Bm25Indexer-bridge-for-chunks.md  task-1.24 - Cosine-top-k-and-weighted-RRF-fusion.md  task-1.3 - Add-SearchConfig-to-notectl-core.md  task-1.4 - Chunker-section-splitting-token-budget-fallback.md  task-1.5 - Storage-manifest-vectors-staleness-diff.md  task-1.6 - Sparse-index-BM25-fusion-cosine-top-k-RRF.md  task-1.7 - Embedding-model-candle-Gemma-3-backbone-pooling-embed.md  task-1.8 - Index-pipeline-walk-diff-chunk-embed-persist.md  task-1.8.1 - Create-index.rs-module-with-IndexBuilder-orchestration.md  task-1.9 - Search-pipeline-freshen-embed-query-hybrid-rank.md  task-10 - Fix-search-returns-error-instead-of-degrading-to-sparse-when-Dense-mode-embedding-is-unavailable-at-query-time.md  task-11 - Fix-TASK-6s-relative-path-chunk-IDs-are-not-backfilled-for-already-indexed-files-leaving-mixed-absolute-relative-paths-after-upgrade.md  task-12 - Fix-SearchMode-JSON-serialization-uses-PascalCase-breaking-documented-lowercase-HTTP-MCP-mode-contract.md  task-13 - Fix-SearchResponse.mode_used-always-echoes-requested-mode-never-reflects-real-auto-degradation.md  task-14 - Fix-get_remote_command-boolean-flag-grammar-mismatch-and-vault_path-missing-panic-risk-for-IndexOperation-SearchOperation.md  task-15 - Fix-reindex-cleanup-in-SearchCapability-build_index-duplicates-storage.rss-persistence-format-knowledge-via-raw-fs-calls.md  task-16 - Remove-dead-SearchEngine-struct-that-duplicates-SearchCapabilitys-index-search-orchestration.md  task-17 - Fix-vault_path-panic-risk-in-notectl-outlines-get_remote_command-args_to_json.md  task-18 - Fix-vault_path-panic-risk-in-notectl-files-ReadFilesOperations-get_remote_command-args_to_json.md  task-19 - Simplify-IndexOperation-get_remote_command-args_to_json-to-use-mut_arg-pattern.md  (+26 more)
docs/plans/: 2026-04-11-notectl-remote-design.md  2026-07-14-ralph-loop-design.md
markdown-todo-extractor-core/: Cargo.toml
markdown-todo-extractor-core/src/: config.rs  lib.rs
markdown-todo-extractor-daily-notes/: Cargo.toml
markdown-todo-extractor-daily-notes/src/: capability.rs  date_utils.rs  pattern.rs
markdown-todo-extractor-files/: Cargo.toml
markdown-todo-extractor-files/src/: capability.rs  lib.rs
markdown-todo-extractor-outline/: Cargo.toml
markdown-todo-extractor-outline/src/: capability.rs
markdown-todo-extractor-tags/: Cargo.toml
markdown-todo-extractor-tags/src/: lib.rs  tag_extractor.rs
markdown-todo-extractor-tasks/: Cargo.toml
markdown-todo-extractor-tasks/src/: capability.rs  filter.rs  lib.rs
notectl-core/: Cargo.toml
notectl-core/src/: config.rs  error.rs  file_walker.rs  operation.rs
notectl-daily-notes/: Cargo.toml
notectl-daily-notes/src/: capability.rs  lib.rs  pattern.rs
notectl-files/: Cargo.toml
notectl-files/src/: capability.rs  lib.rs  recent_files.rs
notectl-outline/: Cargo.toml
notectl-outline/src/: capability.rs  lib.rs  outline_extractor.rs
notectl-search/: Cargo.toml  README.md
notectl-search/examples/: check_chunk_sizes.rs  print_embedding.rs
notectl-search/src/: bm25.rs  capability.rs  chunker.rs  fusion.rs  index.rs  lib.rs  search.rs  sparse.rs  storage.rs  tokenize.rs
notectl-search/src/embeddings/: download.rs  embed.rs  mod.rs  model.rs
notectl-tags/: Cargo.toml
notectl-tags/src/: capability.rs  tag_extractor.rs
notectl-tasks/: Cargo.toml
notectl-tasks/src/: capability.rs  extractor.rs
src/: cli.rs  cli_router.rs  http_router.rs  main.rs  mcp.rs  outline_extractor.rs  prime.rs
src/capabilities/: mod.rs
tests/: mcp_tools.rs
