[package]
name = "markdown-todo-extractor"
version = "0.6.0"
edition = "2024"
description = "Extractor to extract information about todo items from markdown files"
repository = "https://github.com/jeffutter/markdown-todo-extractor"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
axum = "0.8"
clap = { version = "4.5.57", features = ["derive", "env"] }
glob = "0.3"
toml = "0.8"
mimalloc = { version = "0.1.39" }
rayon = "1.10"
regex = { version = "1.10", features = ["perf"] }
rmcp = { version = "0.13", features = ["server", "transport-io", "transport-streamable-http-server"] }
schemars = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9"
simdutf8 = "0.1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "signal", "sync"] }

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = true
codegen-units = 1
