[workspace]
members = [
    ".",
    "markdown-todo-extractor-core",
    "markdown-todo-extractor-tasks",
    "markdown-todo-extractor-tags",
    "markdown-todo-extractor-files",
    "markdown-todo-extractor-daily-notes",
    "markdown-todo-extractor-outline",
]
resolver = "2"

[workspace.package]
version = "0.6.0"
edition = "2024"
repository = "https://github.com/jeffutter/markdown-todo-extractor"

[workspace.dependencies]
async-trait = "0.1"
axum = "0.8"
clap = { version = "4.5.0", features = ["derive", "env"] }
glob = "0.3"
toml = "0.8"
rayon = "1.10"
regex = { version = "1.12", features = ["perf"] }
rmcp = { version = "0.13", features = ["server", "transport-io", "transport-streamable-http-server"] }
schemars = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9"
simdutf8 = "0.1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "signal", "sync"] }
tempfile = "3"

# Workspace members
markdown-todo-extractor-core = { path = "markdown-todo-extractor-core" }
markdown-todo-extractor-tasks = { path = "markdown-todo-extractor-tasks" }
markdown-todo-extractor-tags = { path = "markdown-todo-extractor-tags" }
markdown-todo-extractor-files = { path = "markdown-todo-extractor-files" }
markdown-todo-extractor-daily-notes = { path = "markdown-todo-extractor-daily-notes" }
markdown-todo-extractor-outline = { path = "markdown-todo-extractor-outline" }

[package]
name = "markdown-todo-extractor"
version.workspace = true
edition.workspace = true
description = "Extractor to extract information about todo items from markdown files"
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait.workspace = true
axum.workspace = true
clap.workspace = true
mimalloc = { version = "0.1.39" }
rmcp.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true

# Workspace member crates
markdown-todo-extractor-core.workspace = true
markdown-todo-extractor-tasks.workspace = true
markdown-todo-extractor-tags.workspace = true
markdown-todo-extractor-files.workspace = true
markdown-todo-extractor-daily-notes.workspace = true
markdown-todo-extractor-outline.workspace = true

[dev-dependencies]
tempfile.workspace = true

[profile.release]
lto = true
codegen-units = 1
