[workspace]
members = [
    ".",
    "notectl-core",
    "notectl-tasks",
    "notectl-tags",
    "notectl-files",
    "notectl-daily-notes",
    "notectl-outline",
]
resolver = "2"

[workspace.package]
version = "0.8.4"
edition = "2024"
repository = "https://github.com/jeffutter/notectl"

[workspace.dependencies]
async-trait = "0.1"
axum = "0.8"
clap = { version = "4.5.0", features = ["derive", "env"] }
glob = "0.3"
toml = "0.8"
rayon = "1.10"
regex = { version = "1.10", features = ["perf"] }
rmcp = { version = "0.16", features = ["server", "transport-io", "transport-streamable-http-server"] }
schemars = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9"
simdutf8 = "0.1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "signal", "sync"] }
tokio-util = { version = "0.7" }
tempfile = "3"

# Workspace members
notectl-core = { path = "notectl-core" }
notectl-tasks = { path = "notectl-tasks" }
notectl-tags = { path = "notectl-tags" }
notectl-files = { path = "notectl-files" }
notectl-daily-notes = { path = "notectl-daily-notes" }
notectl-outline = { path = "notectl-outline" }

[package]
name = "notectl"
version.workspace = true
edition.workspace = true
description = "Extractor to extract information about todo items from markdown files"
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait.workspace = true
axum.workspace = true
clap.workspace = true
mimalloc = { version = "0.1.39" }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
rmcp.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-util.workspace = true

# Workspace member crates
notectl-core.workspace = true
notectl-tasks.workspace = true
notectl-tags.workspace = true
notectl-files.workspace = true
notectl-daily-notes.workspace = true
notectl-outline.workspace = true

[dev-dependencies]
tempfile.workspace = true

[profile.release]
lto = true
codegen-units = 1
