[package]
name = "markdown-todo-extractor-core"
version.workspace = true
edition.workspace = true
description = "Core types, traits, and utilities for markdown-todo-extractor"
repository.workspace = true

[dependencies]
async-trait.workspace = true
clap.workspace = true
glob.workspace = true
rmcp.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
