[package]
name = "markdown-todo-extractor-files"
version.workspace = true
edition.workspace = true
description = "File operations capability for markdown-todo-extractor"
repository.workspace = true

[dependencies]
async-trait.workspace = true
clap.workspace = true
markdown-todo-extractor-core.workspace = true
rmcp.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
tempfile.workspace = true
