[package]
name = "notectl-daily-notes"
version.workspace = true
edition.workspace = true
description = "Daily notes capability for notectl"
repository.workspace = true

[dependencies]
async-trait.workspace = true
clap.workspace = true
notectl-core.workspace = true
notectl-files.workspace = true
rmcp.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true
