[package]
name = "notectl-files"
version.workspace = true
edition.workspace = true
description = "File operations capability for notectl"
repository.workspace = true

[dependencies]
async-trait.workspace = true
clap.workspace = true
notectl-core.workspace = true
rmcp.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
tempfile.workspace = true
