[package]
name = "notectl-outline"
version.workspace = true
edition.workspace = true
description = "Outline extraction capability for notectl"
repository.workspace = true

[dependencies]
async-trait.workspace = true
clap.workspace = true
notectl-core.workspace = true
regex.workspace = true
rmcp.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
tempfile.workspace = true
