[package]
name = "notectl-search"
version.workspace = true
edition.workspace = true
description = "Semantic search capability for notectl"
repository.workspace = true

[dependencies]
# Always available: chunker, BM25, storage
async-trait.workspace = true
blake3.workspace = true
clap.workspace = true
tempfile.workspace = true
notectl-core.workspace = true
notectl-outline.workspace = true
rayon.workspace = true
regex.workspace = true
rmcp.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true

# Dense embedding deps - gated behind 'embeddings' feature
candle-core = { workspace = true, optional = true }
candle-transformers = { workspace = true, optional = true }
candle-nn = { workspace = true, optional = true }
dirs = { workspace = true, optional = true }
hf-hub = { workspace = true, optional = true }
tokenizers = { workspace = true, optional = true }
bm25 = { workspace = true, optional = true }

[features]
embeddings = [
  "candle-core",
  "candle-transformers",
  "candle-nn",
  "dirs",
  "hf-hub",
  "tokenizers",
  "bm25",
]
# Integration tests that download and run the actual model.
# Requires HF_TOKEN with accepted license for google/embeddinggemma-300m.
# Not enabled by default — these tests are slow and require network access.
integration = ["embeddings"]

[dev-dependencies]
tempfile.workspace = true
tokio.workspace = true
