[package]
name = "notectl-search"
version.workspace = true
edition.workspace = true
description = "Semantic search capability for notectl"
repository.workspace = true

[dependencies]
# Always available: chunker, BM25, storage
async-trait.workspace = true
blake3.workspace = true
clap.workspace = true
tempfile.workspace = true
notectl-core.workspace = true
notectl-outline.workspace = true
rayon.workspace = true
regex.workspace = true
rmcp.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true

# Dense embedding: HTTP client to an OpenAI-compatible /v1/embeddings endpoint
reqwest.workspace = true
indicatif.workspace = true

[dev-dependencies]
tempfile.workspace = true
tokio.workspace = true
