[package]
name = "notectl-tasks"
version.workspace = true
edition.workspace = true
description = "Task extraction capability for notectl"
repository.workspace = true

[dependencies]
async-trait.workspace = true
clap.workspace = true
notectl-core.workspace = true
rayon.workspace = true
regex.workspace = true
rmcp.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
simdutf8.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true
